--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.3.1</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
+        </dependency>
+
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
